@@ -84,6 +84,12 @@ Quiet operation, just prints warnings and errors on stderr.
 \fB-Q\fR
 Very quiet operation, doesn't print anything except for errors.
 .TP
+\fB-w\fR <file>
+Write warnings and errors into the given file, in addition to stderr.
+.TP
+\fB-W\fR
+Turn warnings into errors.
+.TP
 \fB-P\fR
 Runs Pdb on exception.
 .SH "SEE ALSO"
